@@ -31,3 +31,4 @@ Changes:
 27. Added model function
    - Now you can access any model like <?php model('name')->method() //or model('folder\model')->method()?>	
 28. Update auth class added delete method/member function for delete the user special thanks (https://zestframework.xyz/community/view/uh5UOqe).
+29. Added save method in Avatar and Identicon class.
